--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,8 @@ title: Job Boards Germany and Berlin
 logo: /assets/img/headshot_circle.png
 #description: text below image
 show_downloads: true
-theme: jekyll—theme—minimal
+# theme: jekyll—theme—minimal
+
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
