--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
+<!-- Add Firebase products that you want to use -->
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
+
+
 title: Job Boards Germany and Berlin
 logo: /assets/img/headshot_circle.png
 #description: text below image
